--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Belépés",
   "alertCopy": "Másol",
   "alertClose": "Becsuk",
+  "alertDoNotAsk": "Ne kérdezzen többé",
   "appBeta": "FIGYELEM: béta verzió, csak tesztelésre",
   "footerOpen": "Megnyit / Új",
   "footerSyncError": "Szinkronizálási hiba",
@@ -144,6 +145,7 @@
   "keyChangeTitleExpired": "Mesterkulcs lejárt",
   "keyChangeMessageExpired": "Ennek az adatbázisnak a mesterkulcsa lejárt. Adjon meg egy új kulcsot",
   "keyChangeRepeatPassword": "Jelszó mégegyszer",
+  "keyEnter": "Enter",
   "iconFavTitle": "Weboldal favicon-jának letöltése",
   "iconSelCustom": "Egyéni ikon kiválasztása",
   "listEmptyTitle": "Üres",
@@ -153,6 +155,8 @@
   "listNoUser": "nincs felhasználónév",
   "listNoAttachments": "nincsenek csatolmányok",
   "listAddTemplateHeader": "Sablonok",
+  "listAddTemplateBody1": "A sablonok segítségével, egyetlen kattintással létrehozhat bejegyzéseket. Adjon hozzá valamit a sablon bejegyzéshez és kattintson újra a {}-ra, a sablon használatához.",
+  "listAddTemplateBody2": "A sablonjait mindig meg fogja tudni találni a {} csoportban.",
   "searchAddNew": "Új hozzáadása",
   "searchSort": "Rendezés",
   "searchCreated": "Létrehozva",
@@ -190,7 +194,7 @@
   "openRemoveLastQuestionBody": "A törlendő fájl csak az Alkalmazásban van tárolva. Véglegesen töröljem?",
   "openRemoveLastQuestionModBody": "A törlendő fájl helyi módosításokat tartalmaz. Töröljem és vessem el ezeket a módosításokat?",
   "openLocalFile": "Helyi fájl",
-  "openLocalFileBody": "Egy olyan fájlt kíván megnyitni, mely az alkalmazásban lesz tárolva. A változtatások nem lesznek mentve a fájlrendszerre. Az adatokat tartalmazó fájl megszerzéséhez, exportálja azt a beállításokban.",
+  "openLocalFileBody": "Egy olyan fájlt fog megnyitni, amely az alkalmazáson belül lesz tárolva. Az ön által végzett módosítások nem lesznek visszamentve a fájlrendszerre. Az adatait tartalmazó fájl megszerzéséhez, exportálja azt a beállításokból.",
   "openLocalFileDontShow": "Ne mutassa újra",
   "openWrongFile": "Rossz fájl",
   "openWrongFileBody": "A fájlformátum nem támogatott. Az alkalmazás csak KeePass adatbázis formátumú fájlokkal (kdbx) működik.",
@@ -209,6 +213,8 @@
   "openError": "Hiba",
   "openErrorDescription": "Hiba történt a fájl megnyitása során",
   "openErrorFileNotFound": "Fájl nem található",
+  "openListErrorBody": "Hiba történt a fájl lista betöltése során",
+  "openShowAllFiles": "Minden fájl megjelenítése",
   "detAttDownload": "Shift-klikk a csatolmány gombon a letöltéshez vagy",
   "detAttDelToRemove": "Törlés vagy eltávolítás",
   "detEmpty": "A jelszavai itt fognak megjelenni",
@@ -226,6 +232,12 @@
   "detHistoryNoTitle": "nincs cím",
   "detHistoryCurState": "jelenlegi állapot",
   "detHistoryCurUnsavedState": "jelenlegi nem mentett állapot",
+  "detHistoryRevertAlert": "Visszaállítja ezt a történeti előzmény-állapotot?",
+  "detHistoryRevertAlertBody": "A mostani állapot, szintén el lesz mentve a történeti előzmények közé.",
+  "detHistoryDeleteAlert": "Törölni akarja ezt a történeti előzmény-állapotot?",
+  "detHistoryDeleteAlertBody": "Nem fogja tudni visszaállítani.",
+  "detHistoryDiscardChangesAlert": "Lemond a bejegyzéshez elkészített módosításokról?",
+  "detHistoryDiscardChangesAlertBody": "A nem mentett módosítások el fognak veszni, nem lesz vissza út.",
   "detBackToList": "vissza a listához",
   "detSetIconColor": "Színcsere",
   "detSetIcon": "Ikoncsere",
@@ -241,7 +253,7 @@
   "detAttachments": "Csatolmányok",
   "detDelFromTrash": "Törlés a lomtárból?",
   "detDelFromTrashBody": "Nem tudja később visszaállítani.",
-  "detDelFromTrashBodyHint": "A lomtár összes elemének törléséhez kattintson az ürítés ikonra a Lomtár menüjében.",
+  "detDelFromTrashBodyHint": "A lomtár összes elemének gyors törléséhez kattintson az ürítés ikonra a Lomtár menüjében.",
   "detFieldCopied": "Másolva",
   "detFieldCopiedTime": "Másolva {} másodpercre",
   "detCopyHint": "A mező értékét kimásolhatja a címére történő kattintással",
@@ -257,11 +269,12 @@
   "detClone": "Másolat készítése",
   "detClonedName": "Másol",
   "detAutoType": "Automatikus gépelés",
+  "detAutoTypeSettings": "Automatikus gépelés beállítása",
   "detAutoTypeEnabled": "Automatikus gépelés engedélyezése erre a bejegyzésre",
-  "detAutoTypeSequence": "Billentyűleütések",
+  "detAutoTypeSequence": "Billentyűkódok",
   "detAutoTypeInput": "Bemenet",
   "detAutoTypeShortcutsDesc": "{} vagy {} amíg az alkalmazás inaktív",
-  "detAutoTypeObfuscation": "Valódi billentyűleütések keverése véletlenekkel",
+  "detAutoTypeObfuscation": "Valódi billentyűkódok keverése véletlenszerűekkel",
   "detAutoTypeWindow": "Ablak",
   "detAutoTypeInputWindow": "Ablakcím",
   "detSetupOtpAlert": "QR-kód beolvasása",
@@ -281,6 +294,8 @@
   "detOtpQrErrorBody": "Sajnálom, nem tudtam olvasni a QR-kódot, kérem próbálja újra, vagy a hiba részleteinek megadásával vegye fel a kapcsolatot az alkalmazás szerzőivel.",
   "detOtpQrWrong": "Rossz QR-kód",
   "detOtpQrWrongBody": "A QR-kódját sikeresen beolvastam, de nem tartalmaz egyszer használatos jelszó adatot.",
+  "detLockField": "Zárolja ezt a mezőt, tehát a tartalma nem kereshető és nem látható. A tartalom megjelenítése kizárólag rákattintással lehetséges.",
+  "detUnlockField": "Megszünteti a zárolást, tartalmát azonnal kereshetővé és láthatóvá teszi",
   "autoTypeEntryFields": "Beviteli mezők",
   "autoTypeModifiers": "Módosító kulcsok",
   "autoTypeKeys": "Kulcsok",
@@ -293,8 +308,11 @@
   "autoTypeMsgNoWindow": "Nem tudtam beolvasni az aktív ablak címét, kezdjen el gépelni a kereséshez",
   "autoTypeMsgMatchedByWindow": "Válassza ki a jelszót ehhez: {}",
   "autoTypeNoMatches": "nincs találat",
+  "autoTypeSelectionHint": "Írja be az automatikus gépelési sorrendet",
+  "autoTypeSelectionHintAction": "Csak a jelszót írja be",
+  "autoTypeSelectionHintOpt": "Csak a felhasználói nevet írja be",
   "appSecWarn": "Nem biztonságos!",
-  "appSecWarnBody1": "Ezt az alkalmazást nem biztonságos kapcsolaton keresztül töltötte be. Valaki megfigyelheti és ellophatja a jelszavait. Javasoljuk, hogy csak akkor folytassa, ha pontosan tudja, hogy mit csinál.",
+  "appSecWarnBody1": "Ezt az alkalmazást nem biztonságos kapcsolaton keresztül töltötte be. Valaki megfigyelheti és ellophatja a jelszavait. Erősen javasoljuk, hogy csak akkor folytassa, ha pontosan tudja, hogy mit csinál.",
   "appSecWarnBody2": "Igen, az adatbázisa titkosított, de senki nem garantálhatja azt, hogy az alkalmazás nem lett módosítva letöltés közben.",
   "appSecWarnBtn": "Megértettem a kockázatokat, folytasd",
   "appUnsavedWarn": "Nem mentett módosítások!",
@@ -307,16 +325,19 @@
   "appSaveErrorBody": "Fájl automatikus mentése sikertelen",
   "appSaveErrorBodyMul": "Fájlok automatikus mentése sikertelen:",
   "appSettingsError": "Hiba az alkalmazás betöltése során",
-  "appSettingsErrorBody": "Hiba történt az alkalmazás beállításainak betöltése közben. Kérem ellenőrizze az alkalmazás URL-jét, vagy vegye fel a kapcsolatot a rendszergazdával.",
-  "appNotSupportedError": "Nem támogatott a böngészője.",
+  "appSettingsErrorBody": "Hiba történt az alkalmazás beállításainak betöltése közben. Kérem még egyszer ellenőrizze az alkalmazás URL-jét, vagy vegye fel a kapcsolatot a rendszergazdával.",
+  "appNotSupportedError": "A böngészője nem támogat némely fontos sajátosságokat amiket az alkalmazás használ.",
   "appTabWarn": "Túl sok lap",
   "appTabWarnBody": "A KeeWebet nem lehet egyszerre két böngészőlapon használni, kérem zárja ezt be.",
+  "appRightsAlert": "KeeWeb alkalmazás zárolása",
+  "appRightsAlertBody1": "A KeeWeb alkalmazás jelenleg nem védett a jogosulatlan változtatásoktól. Kérjük önt, hogy az alkalmazás kizárólag adminisztrátorok számára legyen írható.",
+  "appRightsAlertBody2": "Nem szeretne illetékteleneknek jogosultságot adni? Beállíthatja a Terminálból",
   "setGenTitle": "Általános beállítások",
   "setGenUpdate": "Frissítés",
   "setGenNewVersion": "Új alkalmazás verzió jelent meg és került letöltésre",
   "setGenReleaseNotes": "Kiadási megjegyzések",
   "setGenReloadToUpdate": "Töltse újra a frissítéshez",
-  "setGenUpdateManual": "Új verzió jelent meg. Automatikusan ellenőrzi és telepíti a frissítéseket, de az automatikus frissítés az Ön verziójáról nem lehetséges.",
+  "setGenUpdateManual": "Új verzió jelent meg. Automatikusan ellenőrizni és telepíteni fogja a frissítéseket, de az automatikus frissítés az Ön verziójáról nem lehetséges.",
   "setGenDownloadUpdate": "Frissítés letöltése",
   "setGenUpdateAuto": "Letöltés és frissítés automatikusan",
   "setGenUpdateCheck": "Ellenőrizze, de ne telepítse",
@@ -353,10 +374,15 @@
   "setGenTitlebarStyle": "Ablakstílus (újraindítás szükséges)",
   "setGenTitlebarStyleDefault": "Alapértelmezett",
   "setGenTitlebarStyleHidden": "Egyedi cím",
+  "setGenTitlebarStyleHiddenInset": "Egyedi cím, megfogható ablak",
   "setGenShowSubgroups": "Minden alcsoport bejegyzéseinek megjelenítése",
   "setGenTableView": "Bejegyzések listája táblázatban",
   "setGenColorfulIcons": "Színes egyedi ikonok a listában",
   "setGenFunction": "Működés",
+  "setGenAutoSyncOnClose": "Automatikus mentés és szinkronizálás bezáráskor",
+  "setGenAutoSyncTimer": "Automatikus mentés és szinkronizálás időszakosan",
+  "setGenAutoSyncTimerOff": "Letiltva",
+  "setGenAutoSyncTimerInterval": "Minden {}. percben",
   "setGenRememberKeyFiles": "Kulcs fájlok megjegyzése",
   "setGenNoRememberKeyFiles": "Ne jegyezze meg",
   "setGenRememberKeyFilesData": "Tárolja az alkalmazás belső tárolójában",
@@ -372,8 +398,11 @@
   "setGenClearSeconds": "{} másodpercen belül",
   "setGenClearMinute": "Egy percen belül",
   "setGenMinInstead": "Az alkalmazás minimalizálása bezárás helyett",
+  "setGenLock": "Automatikus zárolás",
   "setGenLockMinimize": "Amikor az alkalmazás kisméretű",
-  "setGenLockCopy": "Automatikus zárolás jelszómásolásnál",
+  "setGenLockCopy": "Automatikus zárolás jelszó másolásnál",
+  "setGenLockAutoType": "Automatikus gépelés esetén",
+  "setGenLockOrSleep": "Amikor a számítógép zárolt, vagy alvó állapotban van",
   "setGenStorage": "Tároló",
   "setGenShowAdvanced": "Haladó beállítások megjelenítése",
   "setGenDevTools": "Fejlesztőeszközök megjelenítése",
@@ -390,13 +419,17 @@
   "setFileSaveTo": "Mentés ide...",
   "setFileClose": "Bezárás",
   "setFileSync": "Szinkronizálás",
+  "setFileSyncVerb": "Szinkronizál",
   "setFileSaveToXml": "XML",
   "setFileLastSync": "Utolsó szinkronizálás",
   "setFileLastSyncUnknown": "ismeretlen",
   "setFileSyncInProgress": "szinkronizálás folyamatban",
   "setFileSyncError": "Szinkronizálási hiba",
   "setFilePass": "Mester jelszó",
+  "setFileConfirmPass": "Mester jelszó megerősítése",
+  "setFilePassChange": "Jelszava cseréjéhez, kérem írja be a Megerősítés mezőbe",
   "setFilePassChanged": "a jelszava megváltozott; hagyja üresen a mezőt a régi jelszó használatához",
+  "setFilePassNotMatch": "a jelszavak nem egyeznek meg, kérem írja be újra",
   "setFileKeyFile": "Kulcsfájl",
   "setFileSelKeyFile": "Kulcsfájl kiválasztása",
   "setFileNames": "Nevek",
@@ -412,6 +445,8 @@
   "setFileBackupNowWorking": "Dolgozom...",
   "setFileBackupError": "Biztonsági mentés hiba",
   "setFileBackupErrorDescription": "Hiba biztonsági mentés fájl írás során",
+  "setFileBackupErrorIsDir": "A biztonsági mentés elérési útja érvénytelen",
+  "setFileBackupErrorIsDirDescription": "A biztonsági mentés elérési útja, úgy tűnik egy könyvtárra mutat. Kérem inkább határozzon meg egy fájlnevet, egy könyvtáron belül.",
   "setFileBackupOnSave": "Minden alkalommal, amikor mentem a fájlt",
   "setFileBackupDaily": "Naponta",
   "setFileBackupWeekly": "Hetente",
@@ -429,7 +464,7 @@
   "setFileGenKeyFile": "Új kulcsfájl generálása",
   "setFileDontUseKeyFile": "Ne használjon kulcsfájlt",
   "setFileEmptyPass": "Üres jelszó",
-  "setFileEmptyPassBody": "Az adatbázis jelszó nélküli mentése azt teljesen védtelenné teszi. Biztos benne?",
+  "setFileEmptyPassBody": "Az adatbázis jelszó nélküli mentése azt teljesen védtelenné teszi. Tényleg biztos benne?",
   "setFileSaveError": "Mentési hiba",
   "setFileSaveErrorBody": "Hiba a fájlba történő mentés során",
   "setFileAlreadyExists": "Már létezik",
@@ -461,6 +496,7 @@
   "setShAutoTypeGlobal": "automatikus gépelés (amikor az alkalmazás háttérben van)",
   "setShLock": "adatbázis zárolása",
   "setPlInstallTitle": "Új beépülők telepítése",
+  "setPlInstallDesc": "A KeeWeb beépülők kiegészítéseket, témákat, és nyelveket adnak hozzá a KeeWeb-hez. A beépülők ugyanazokkal a jogosultságokkal futnak mint a KeeWeb, hozzáférhetnek és kezelhetik az ön összes jelszavát. Soha ne telepítsen olyan beépülőt amiben nem bízik meg.",
   "setPlInstallLabel": "Beépülő URL",
   "setPlInstallBtn": "Telepítés",
   "setPlInstallBtnProgress": "Telepítés...",
@@ -468,13 +504,27 @@
   "setPlDisableBtn": "Letiltás",
   "setPlEnableBtn": "Engedélyezés",
   "setPlUpdateBtn": "Frissítés",
+  "setPlLocaleBtn": "Váltás erre a nyelvre",
+  "setPlThemeBtn": "Váltás erre a témára",
   "setPlJs": "kód",
   "setPlCss": "stílusok",
   "setPlLoc": "nyelv",
   "setPlCreatedBy": "Készítette: {}",
+  "setPlLoadTime": "betöltése {}-t vesz igénybe",
+  "setPlLastUpdate": "Frissítések utolsó ellenőrzése",
+  "setPlLoadError": "beépülő betöltése során hiba lépett fel",
+  "setPlGalleryLoading": "Beépülők betöltése, kérem várjon",
+  "setPlGalleryLoadError": "Beépülők betöltése során hiba lépett fel",
+  "setPlInstallUrlTitle": "Beépülő hozzáadása URL-ből",
+  "setPlInstallUrlDesc": "Ha a beépülő nem szerepel a válogatásban, manuálisan telepítheti URL-ből",
   "setPlOfficial": "Hivatalos KeeWeb beépülő",
   "setPlSearch": "Beépülők keresése",
+  "setPlDevelop": "Fejleszteni akar saját beépülőket?",
+  "setPlDevelopStart": "Kezdje itt",
+  "setPlTranslate": "Vagy {}",
+  "setPlTranslateLink": "lefordíthatja az alkalmazást a saját nyelvére",
   "setPlAutoUpdate": "Automatikus frissítés",
+  "setPlLoadGallery": "Beépülő válogatás betöltése",
   "setAboutTitle": "Névjegy",
   "setAboutBuilt": "Ez az alkalmazás ezekkel a fantasztikus eszközökkel készült",
   "setAboutLic": "Licenc",
@@ -483,7 +533,7 @@
   "setAboutSecond": "és licencelve {} alatt.",
   "setAboutSource": "A forráskód és a problémák a {}-on érhetők el.",
   "setHelpFormat": "Fájlformátum",
-  "setHelpFormatBody": "Ez a {} alkalmazás egy webes technológiákat felhasználó portja. Képes kezelni a KeePass formátumot (kdbx). Létrehozhat ilyen fájlokat (jelszó adatbázisok) akár KeePass-ben, akár ebben az alkalmazásban. A fájlformátum 100%-ban kompatibilis és mindkét alkalmazás által értelmezhető.",
+  "setHelpFormatBody": "Ez az alkalmazásfelület, egy a {} alkalmazás webes technológiákkal létrehozott megnyilvánulása. Képes kezelni a KeePass fájlformátumot (kdbx). Létrehozhat ilyen fájlokat (jelszó adatbázisok) akár KeePass-ben, akár ebben az alkalmazásban. A fájlformátum 100%-ban kompatibilis és mindkét alkalmazás által értelmezhető.",
   "setHelpProblems": "Segítségre van szüksége?",
   "setHelpProblems1": "Ha valami nem sikerül, kérem {}",
   "setHelpProblems2": "vagy {}",
@@ -495,7 +545,7 @@
   "setHelpWebApp": "Webalkalmazás",
   "setHelpUpdates": "Frissítések",
   "setHelpTwitter": "Alkalmazás twitter",
-  "dropboxSetupDesc": "A Dropbox saját szerveren működtetett alkalmazással történő használatához néhány beállításra van szükség. Hozza létre a Dropbox saját alkalmazását és adja meg a kulcsát.",
+  "dropboxSetupDesc": "Némi beállításra van szükség a Dropbox használatához, a saját kiszolgálón működtetett alkalmazás esetén. Kérem készítse el a saját Dropbox alkalmazását és lent adja meg annak kulcsát.",
   "dropboxAppKey": "Dropbox alkalmazás kulcs",
   "dropboxAppKeyDesc": "Másolja ide a kulcsot a Dropbox alkalmazásából (Fejlesztői beállítások)",
   "dropboxFolder": "Alkalmazás mappa",
@@ -506,8 +556,12 @@
   "dropboxLinkApp": "Alkalmazás mappa (Apps/KeeWeb)",
   "dropboxLinkFull": "Teljes Dropbox vagy bármelyik mappa",
   "dropboxLinkCustom": "Saját Dropbox alkalmazás",
+  "gdriveSharedWithMe": "Velem megosztott",
+  "webdavSaveMethod": "Mentési módszer",
+  "webdavSaveMove": "Ideiglenes fájl feltöltése és áthelyezése",
+  "webdavSavePut": "kdbx fájl felülírása, PUT-al",
   "launcherSave": "Jelszó adatbázis mentése",
   "launcherFileFilter": "KeePass fájlok",
   "authPopupRequired": "Az előugró ablakok blokkoltak",
-  "authPopupRequiredBody": "Engedélyezze böngészőjében az előugró ablakokat erre az alkalmazásra"
+  "authPopupRequiredBody": "Kérem engedélyezze böngészőjében az előugró ablakokat ehhez az alkalmazáshoz, vagy próbálja újra."
 }
