--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -173,7 +173,7 @@
   "searchProtect": "Güvenli alanlar",
   "searchOptions": "Seçenekler",
   "searchCase": "Durum eşleştir",
-  "searchRegex": "RegEx",
+  "searchRegex": "Düzenli ifade",
   "openOpen": "Aç",
   "openNew": "Yeni",
   "openMore": "Dahası",
