--- a/docs/translations/es-ES/es-ES.json
+++ b/docs/translations/es-ES/es-ES.json
@@ -45,7 +45,7 @@
     "Vie.",
     "Sáb."
   ],
-  "retToApp": "volver a aplicación",
+  "retToApp": "volver a la aplicación",
   "name": "nombre",
   "icon": "icono",
   "title": "título",
@@ -109,6 +109,8 @@
   "genPresetMac": "dirección MAC",
   "genPresetHash128": "hash de 128 bits",
   "genPresetHash256": "hash de 256 bits",
+  "genHidePass": "Ocultar contraseña",
+  "genShowPass": "Mostrar contraseña",
   "grpTitle": "Grupo",
   "grpSearch": "Habilitar la búsqueda de entradas en este grupo",
   "grpAutoType": "Habilitar autocompletado",
@@ -174,6 +176,7 @@
   "searchOptions": "Opciones",
   "searchCase": "Coincidir mayúsculas",
   "searchRegex": "RegEx",
+  "searchRank": "Rango",
   "openOpen": "Abrir",
   "openNew": "Nueva",
   "openMore": "Más",
@@ -186,15 +189,15 @@
   "openDropHere": "Suelta aquí los archivos",
   "openFailedRead": "Error al leer el archivo",
   "openNothingFound": "Nada encontrado",
-  "openNothingFoundBody": "No hay archivos que puedan ser abiertos",
+  "openNothingFoundBody": "No se han encontrado archivos compatibles.",
   "openSelectFile": "Selecciona un archivo",
-  "openSelectFileBody": "Selecciona el archivo que quieres abrir",
+  "openSelectFileBody": "Selecciona el archivo que desees abrir",
   "openPassFor": "Contraseña para",
   "openRemoveLastQuestion": "¿Eliminar archivo local?",
   "openRemoveLastQuestionBody": "El archivo que estás eliminando solo se encuentra almacenado dentro de la aplicación. ¿Deseas eliminarlo definitivamente?",
   "openRemoveLastQuestionModBody": "El archivo que vas a borrar contiene modificaciones locales. ¿Seguro que quieres eliminarlo y descartar esas modificaciones?",
   "openLocalFile": "Archivo local",
-  "openLocalFileBody": "El archivo que vas a abrir será almacenado dentro de la aplicación. Los cambios que hagas no se guardarán en el sistema de archivos. Para recuperar el archivo con tus datos, expórtalo desde las opciones.",
+  "openLocalFileBody": "Estás a punto de abrir un archivo que será almacenado dentro de la aplicación. Los cambios que hagas no se guardarán en el sistema de archivos. Para recuperar el archivo con tus datos, expórtalo desde las opciones.",
   "openLocalFileDontShow": "No mostrar otra vez",
   "openWrongFile": "Archivo dañado",
   "openWrongFileBody": "Este formato de archivo no está soportado. Esta aplicación funciona con formatos de base de datos de KeePass (kdbx).",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Archivo no encontrado",
   "openListErrorBody": "Se ha producido un error al cargar la lista de archivos",
   "openShowAllFiles": "Mostrar todos los archivos",
+  "openFileNoCacheError": "Fichero no encontrado en el almacenamiento caché. Esto puede suceder por haber limpiado el caché del navegador. Para abrir el fichero, elimínalo de KeeWeb y vuelve a añadirlo.",
   "detAttDownload": "Haz Mayús-clic sobre el botón para descargar o",
   "detAttDelToRemove": "Delete para eliminar",
   "detEmpty": "Tus contraseñas se mostarán aquí",
@@ -236,8 +240,8 @@
   "detHistoryRevertAlertBody": "Tu estado actual será guardado en el historial.",
   "detHistoryDeleteAlert": "¿Eliminar este estado del historial?",
   "detHistoryDeleteAlertBody": "No podrás recuperarlo.",
-  "detHistoryDiscardChangesAlert": "¿Descartar cambios realizados a la entrada?",
-  "detHistoryDiscardChangesAlertBody": "Se perderán los cambios no guardados, no habrá forma de volver atrás.",
+  "detHistoryDiscardChangesAlert": "¿Descartar los cambios realizados en la entrada?",
+  "detHistoryDiscardChangesAlertBody": "Se perderán los cambios no guardados, no habrá forma de recuperarlos.",
   "detBackToList": "volver a lista",
   "detSetIconColor": "Cambiar color",
   "detSetIcon": "Cambiar icono",
@@ -326,7 +330,7 @@
   "appSaveErrorBodyMul": "Fallo al auto-guardar archivos:",
   "appSettingsError": "Error cargando aplicación",
   "appSettingsErrorBody": "Hubo un error cargando los ajustes de la aplicación. Por favor, vuelve a comprobar la URL o contacta con tu administrador.",
-  "appNotSupportedError": "Tu navegador no está soportado.",
+  "appNotSupportedError": "Tu navegador no soporta algunas de las importantes características que utilizamos.",
   "appTabWarn": "Demasiadas pestañas",
   "appTabWarnBody": "KeeWeb no se puede utilizar en dos pestañas a la vez, por favor, cierra esta pestaña.",
   "appRightsAlert": "Bloqueando la app KeeWeb",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Mostrar entradas de todos los subgrupos",
   "setGenTableView": "Vista de tabla de lista de entradas",
   "setGenColorfulIcons": "Iconos coloridos customizados en lista",
+  "setGenDirectAutotype": "Si se encuentra una única entrada, selecciónala para Auto-tecleo automático.",
   "setGenFunction": "Función",
   "setGenAutoSyncOnClose": "Guardar y sincronizar automáticamente al cerrar",
   "setGenAutoSyncTimer": "Guardar y sincronizar periódicamente de forma automática",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Archivos sin guardar",
   "setGenTryBetaWarningBody": "Por favor guarda todos los archivos y vuelve a hacer clic sobre este botón",
   "setGenShowAppLogs": "Mostrar logs de aplicación",
+  "setGenReloadApp": "Recargar la app",
   "setFilePath": "Ruta de archivo",
   "setFileStorage": "Este archivo se ha cargado de {}.",
   "setFileIntl": "Este archivo está almacenado dentro de la aplicación.",
