--- a/docs/translations/fr-FR/fr-FR.json
+++ b/docs/translations/fr-FR/fr-FR.json
@@ -109,6 +109,8 @@
   "genPresetMac": "adresse MAC",
   "genPresetHash128": "hash 128-bit",
   "genPresetHash256": "hash 256-bit",
+  "genHidePass": "Masquer le mot de passe",
+  "genShowPass": "Afficher le mot de passe",
   "grpTitle": "Groupe",
   "grpSearch": "Activer la recherche dans les entrées de ce groupe",
   "grpAutoType": "Activer l'auto-complétion",
@@ -174,6 +176,7 @@
   "searchOptions": "Options",
   "searchCase": "Respecte la casse",
   "searchRegex": "RegEx",
+  "searchRank": "Rang",
   "openOpen": "Ouvrir",
   "openNew": "Nouveau",
   "openMore": "Plus",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Fichier non trouvé",
   "openListErrorBody": "Erreur au chargement de la liste des fichiers",
   "openShowAllFiles": "Tous les fichiers",
+  "openFileNoCacheError": "Fichier non trouvé dans la mémoire cache. Cela peut arriver parce que le stockage du navigateur a été nettoyé. Pour ouvrir le fichier, supprimez-le de KeeWeb et ajoutez-le à nouveau.",
   "detAttDownload": "Cliquer sur le bouton de pièce-jointe en pressant la touche Maj ou",
   "detAttDelToRemove": "Supprimer pour enlever",
   "detEmpty": "Vos mot de passe seront affichés ici",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Afficher les entrées de tous les sous groupes",
   "setGenTableView": "Voir les entrées en liste",
   "setGenColorfulIcons": "Icônes en couleur dans la liste",
+  "setGenDirectAutotype": "Si une seule entrée correspondante est trouvée, sélectionner celle-ci automatiquement pour l'autotype.",
   "setGenFunction": "Opérations",
   "setGenAutoSyncOnClose": "Sauvegarde et synchro automatique à la fermeture",
   "setGenAutoSyncTimer": "Sauvegarde et synchro automatique régulièrement",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Fichiers non sauvegardés",
   "setGenTryBetaWarningBody": "Sauvegarder tous les fichiers et re-cliquer ce bouton",
   "setGenShowAppLogs": "Voir les logs",
+  "setGenReloadApp": "Recharger l'application",
   "setFilePath": "Chemin",
   "setFileStorage": "Le fichier est ouvert de {}.",
   "setFileIntl": "Le fichier est stocké en interne de l'appli",
