--- a/docs/translations/hu/hu.json
+++ b/docs/translations/hu/hu.json
@@ -236,8 +236,8 @@
   "detHistoryRevertAlertBody": "A mostani állapot, szintén el lesz mentve a történeti előzmények közé.",
   "detHistoryDeleteAlert": "Törölni akarja ezt a történeti előzmény-állapotot?",
   "detHistoryDeleteAlertBody": "Nem fogja tudni visszaállítani.",
-  "detHistoryDiscardChangesAlert": "Lemond a bejegyzéshez elkészített módosításokról?",
-  "detHistoryDiscardChangesAlertBody": "A nem mentett módosítások el fognak veszni, nem lesz vissza út.",
+  "detHistoryDiscardChangesAlert": "Elveti a bejegyzésben tett módosításokat?",
+  "detHistoryDiscardChangesAlertBody": "A nem mentett módosítások el fognak veszni, nem lesz visszaút.",
   "detBackToList": "vissza a listához",
   "detSetIconColor": "Színcsere",
   "detSetIcon": "Ikoncsere",
@@ -537,8 +537,8 @@
   "setHelpProblems": "Segítségre van szüksége?",
   "setHelpProblems1": "Ha valami nem sikerül, kérem {}",
   "setHelpProblems2": "vagy {}",
-  "setHelpOpenIssue": "nyisson egy kérdést a GitHub-on.",
-  "setHelpContactLink": "vegye fel a kapcsolatot követlenül a fejlesztővel",
+  "setHelpOpenIssue": "nyisson egy kérdést a GitHub-on",
+  "setHelpContactLink": "vegye fel a kapcsolatot követlenül egy fejlesztővel",
   "setHelpAppInfo": "Alkalmazás információ",
   "setHelpOtherPlatforms": "Más platformok",
   "setHelpDesktopApps": "Asztali alkalmazások",
