--- a/docs/translations/pl/pl.json
+++ b/docs/translations/pl/pl.json
@@ -109,6 +109,8 @@
   "genPresetMac": "Adres MAC",
   "genPresetHash128": "128-bitowy hash",
   "genPresetHash256": "256-bitowy hash",
+  "genHidePass": "Ukryj hasło",
+  "genShowPass": "Pokaż hasło",
   "grpTitle": "Grupa",
   "grpSearch": "Włącz wyszukiwanie wpisów w tej grupie",
   "grpAutoType": "Włącz auto-type",
@@ -174,6 +176,7 @@
   "searchOptions": "Opcje",
   "searchCase": "Wielkość liter",
   "searchRegex": "RegEx",
+  "searchRank": "Ranga",
   "openOpen": "Otwórz",
   "openNew": "Nowy",
   "openMore": "Więcej",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Nie znaleziono pliku",
   "openListErrorBody": "Wystąpił błąd podczas ładowania listy plików",
   "openShowAllFiles": "Pokaż wszystkie pliki",
+  "openFileNoCacheError": "Nie znaleziono pliku w pamięci podręcznej. Może się tak zdarzyć, ponieważ pamięć przeglądarki została wyczyszczona. Aby otworzyć plik, usuń go z KeeWeb i dodaj go ponownie.",
   "detAttDownload": "Shift+kliknięcie przycisku załącznika, aby pobrać, albo",
   "detAttDelToRemove": "Delete, aby usunąć",
   "detEmpty": "Twoje hasła zostaną tutaj wyświetlone",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Pokaż wpisy ze wszystkich podgrup",
   "setGenTableView": "Widok tabeli listy wpisów",
   "setGenColorfulIcons": "Kolorowe niestandardowe ikony na liście",
+  "setGenDirectAutotype": "Jeśli znaleziono tylko jeden pasujący wpis, wybierz go automatycznie dla auto-type",
   "setGenFunction": "Działanie",
   "setGenAutoSyncOnClose": "Automatycznie zapisuj i synchronizuj przy zamknięciu",
   "setGenAutoSyncTimer": "Automatycznie zapisuj i synchronizuj okresowo",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Niezapisane pliki",
   "setGenTryBetaWarningBody": "Proszę zapisać wszystkie pliki i kliknąć ten przycisk ponownie",
   "setGenShowAppLogs": "Pokaż logi aplikacji",
+  "setGenReloadApp": "Załaduj ponownie aplikację",
   "setFilePath": "Ścieżka pliku",
   "setFileStorage": "Ten plik jest wczytany z {}.",
   "setFileIntl": "Ten plik jest przechowywany w wewnętrznym magazynie aplikacji",
