--- a/docs/translations/uk/uk.json
+++ b/docs/translations/uk/uk.json
@@ -92,6 +92,7 @@
   "alertSignIn": "Увійти ",
   "alertCopy": "Копіювати ",
   "alertClose": "Закрити ",
+  "alertDoNotAsk": "Більше ніколи не запитувати",
   "appBeta": "ПОПЕРЕДЖЕННЯ: бета-версія, тільки для ознайомлення ",
   "footerOpen": "Відкрити / Створити ",
   "footerSyncError": "Помилка синхронізації ",
@@ -211,6 +212,7 @@
   "openError": "Помилка",
   "openErrorDescription": "Помилка під час відкриття файлу",
   "openErrorFileNotFound": "Файл не знайдено",
+  "openShowAllFiles": "Показати всі файли",
   "detAttDownload": "Натисніть Shift і клацніть по вкладенню щоб завантажити або",
   "detAttDelToRemove": "Delete для видалення",
   "detEmpty": "Ваші паролі будуть відображатися тут",
@@ -314,6 +316,8 @@
   "appNotSupportedError": "Ваш браузер не підтримується.",
   "appTabWarn": "Забагато вкладок ",
   "appTabWarnBody": "KeeWeb не може бути використаний в двох вкладках браузера одночасно, будь ласка, закрийте цю вкладку.",
+  "appRightsAlertBody1": "Ваш застосунок KeeWeb поки що не захищений від внесення несанкціонованих змін. Просимо надати дозвіл на запис у застосунку лише для адміністраторів.",
+  "appRightsAlertBody2": "Не хочете надавати дозвіл? Тоді, ви можете зробити це самі через Термінал",
   "setGenTitle": "Загальні налаштування",
   "setGenUpdate": "Оновлення",
   "setGenNewVersion": "Нова версія програми була випущена і завантажена",
