--- a/docs/translations/ru-RU/ru-RU.json
+++ b/docs/translations/ru-RU/ru-RU.json
@@ -109,6 +109,8 @@
   "genPresetMac": "MAC-адрес",
   "genPresetHash128": "128-битный хэш",
   "genPresetHash256": "256-битный хэш",
+  "genHidePass": "Скрыть пароль",
+  "genShowPass": "Показать пароль",
   "grpTitle": "Группа",
   "grpSearch": "Включить поиск по элементам в этой группе",
   "grpAutoType": "Включить автозаполнение",
@@ -123,7 +125,7 @@
   "tagExists": "Тег уже существует",
   "tagExistsBody": "Тег с таким названием уже существует. Пожалуйста, выберите другое название.",
   "tagBadName": "Плохое название",
-  "tagBadNameBody": "Тег не может содержать следующие символы: {}. Пожалуйста, удалите их.",
+  "tagBadNameBody": "Тег не может содержать следующие символы {}. Пожалуйста, удалите их.",
   "genPsTitle": "Набор параметров генератора",
   "genPsCreate": "Новый шаблон",
   "genPsDelete": "Удалить шаблон",
@@ -174,6 +176,7 @@
   "searchOptions": "Настройки",
   "searchCase": "С учетом регистра",
   "searchRegex": "RegEx",
+  "searchRank": "Класс",
   "openOpen": "Открыть",
   "openNew": "Создать",
   "openMore": "Больше",
@@ -186,15 +189,15 @@
   "openDropHere": "перетащите файлы сюда",
   "openFailedRead": "Не удалось прочитать файл",
   "openNothingFound": "Ничего не найдено",
-  "openNothingFoundBody": "Нет файлов, которые могли быть открыты.",
+  "openNothingFoundBody": "Мы не нашли подходящих файлов.",
   "openSelectFile": "Выберите файл",
-  "openSelectFileBody": "Выберите файл, который вы хотите открыть",
+  "openSelectFileBody": "Выберите файл для открытия",
   "openPassFor": "Пароль для",
   "openRemoveLastQuestion": "Удалить локальный файл?",
   "openRemoveLastQuestionBody": "Удаляемый файл хранится только внутри приложения. Удалить его навсегда?",
   "openRemoveLastQuestionModBody": "Удаляемый файл имеет локальные модификации. Удалить и отменить эти изменения?",
   "openLocalFile": "Локальный файл",
-  "openLocalFileBody": "Вы собираетесь открыть файл, который будет храниться внутри приложения. Внесенные изменения не будут сохранены в файловой системе. Чтобы получить файл с данными, экспортируйте его из параметров приложения.",
+  "openLocalFileBody": "Вы собираетесь открыть файл, который будет храниться внутри приложения. Внесенные изменения не будут сохранены в файловой системе. Чтобы получить файл с данными, экспортируйте его из настроек.",
   "openLocalFileDontShow": "Больше не показывать это сообщение",
   "openWrongFile": "Плохой файл",
   "openWrongFileBody": "Данный формат файла не поддерживается. Приложение работает с файлами базы данных KeePass (kdbx).",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Файл не найден",
   "openListErrorBody": "При загрузке списка файлов произошла ошибка",
   "openShowAllFiles": "Показать все файлы",
+  "openFileNoCacheError": "Файл не найден в кэше. Это могло произойти из-за очистки хранилища браузера. Для открытия файла удалите его из KeeWeb и добавьте снова.",
   "detAttDownload": "Нажмите Shift и кликните по вложению чтобы загрузить или",
   "detAttDelToRemove": "Delete для удаления",
   "detEmpty": "Здесь будут отображаться ваши пароли",
@@ -236,8 +240,8 @@
   "detHistoryRevertAlertBody": "Ваше текущее состояние будет сохранено в истории.",
   "detHistoryDeleteAlert": "Удалить это состояние истории?",
   "detHistoryDeleteAlertBody": "Вы не сможете его восстановить.",
-  "detHistoryDiscardChangesAlert": "Отменить изменения, внесенные в запись?",
-  "detHistoryDiscardChangesAlertBody": "Несохраненные изменения будут потеряны, обратного пути не будет.",
+  "detHistoryDiscardChangesAlert": "Сбросить изменения, внесенные в запись?",
+  "detHistoryDiscardChangesAlertBody": "Несохраненные изменения будут потеряны, пути назад не будет.",
   "detBackToList": "обратно к списку",
   "detSetIconColor": "Изменить цвет",
   "detSetIcon": "Изменить иконку",
@@ -253,7 +257,7 @@
   "detAttachments": "Вложения",
   "detDelFromTrash": "Удалить из корзины?",
   "detDelFromTrashBody": "Вы не сможете отменить эту операцию.",
-  "detDelFromTrashBodyHint": "Чтобы быстро удалить все содержимое корзины, нажмите пиктограмму очистки в меню корзины.",
+  "detDelFromTrashBodyHint": "Для быстрого удаления всех элементов из корзины, щелкните значок очистки в меню корзины.",
   "detFieldCopied": "скопирован",
   "detFieldCopiedTime": "Скопировано на {} секунд",
   "detCopyHint": "Вы можете скопировать значение поля, нажав на его заголовок",
@@ -312,21 +316,21 @@
   "autoTypeSelectionHintAction": "Только введите пароль",
   "autoTypeSelectionHintOpt": "Только введите имя пользователя",
   "appSecWarn": "Не безопасно!",
-  "appSecWarnBody1": "Вы загрузили это приложение через незащищенное соединение. Кто-то может наблюдать за вами и украсть ваши пароли. Мы настоятельно рекомендуем вам остановиться, если вы не понимаете, что происходит.",
+  "appSecWarnBody1": "Вы загрузили это приложение через незащищенное соединение. Кто-то может наблюдать за вами и украсть ваши пароли. Мы настоятельно рекомендуем вам остановиться, если вы четко не понимаете, что делаете.",
   "appSecWarnBody2": "Да, база данных зашифрована, но никто не может гарантировать, что приложение не было изменено в пути к вам.",
   "appSecWarnBtn": "Я осознаю риск, продолжить",
   "appUnsavedWarn": "Несохраненные изменения!",
   "appUnsavedWarnBody": "У вас есть несохраненные файлы, если закрыть приложение, изменения будут утеряны.",
   "appDontExitBtn": "Не выходить",
-  "appCannotLockAutoInit": "Приложение не может быть заблокировано, поскольку автоматическое сохранение отключено.",
+  "appCannotLockAutoInit": "Приложение не может быть заблокировано, поскольку опция автосохранения отключена.",
   "appCannotLock": "Несохраненные изменения будут утеряны. Продолжить?",
   "appAutoSave": "Сохранять изменения автоматически",
   "appSaveError": "Ошибка сохранения",
   "appSaveErrorBody": "Не удалось автоматически сохранить файл",
   "appSaveErrorBodyMul": "Не удалось автоматически сохранить файлы:",
   "appSettingsError": "Ошибка загрузки приложения",
-  "appSettingsErrorBody": "Ошибка загрузки настроек приложения. Пожалуйста, проверьте URL-адрес или обратитесь к администратору.",
-  "appNotSupportedError": "Ваш браузер не поддерживается.",
+  "appSettingsErrorBody": "Произошла ошибка при загрузке настроек приложения. Пожалуйста, дважды проверьте URL-адрес приложения или обратитесь к вашему администратору.",
+  "appNotSupportedError": "Ваш браузер не поддерживает некоторые важные функции, которые мы используем.",
   "appTabWarn": "Слишком много вкладок",
   "appTabWarnBody": "Нельзя использовать KeeWeb в двух вкладках браузера одновременно. Пожалуйста, закройте эту вкладку.",
   "appRightsAlert": "Блокировка приложения KeeWeb",
@@ -337,7 +341,7 @@
   "setGenNewVersion": "Новая версия приложения была выпущена и загружена",
   "setGenReleaseNotes": "Просмотр примечаний к релизу",
   "setGenReloadToUpdate": "Перезагрузить для обновления",
-  "setGenUpdateManual": "Доступна новая версия. Она сможет проверять наличие обновлений и устанавливать их автоматически, но автоматическое обновление с текущей версии невозможно.",
+  "setGenUpdateManual": "Доступна новая версия. Она сможет проверять наличие обновлений и устанавливать их автоматически, но автоматическое обновление с вашей версии невозможно.",
   "setGenDownloadUpdate": "Загрузить обновление",
   "setGenUpdateAuto": "Автоматическая загрузка и установка",
   "setGenUpdateCheck": "Проверять, но не устанавливать",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Показать записи из всех подгрупп",
   "setGenTableView": "Табличное представление списка записей",
   "setGenColorfulIcons": "Красочные иконки в списке",
+  "setGenDirectAutotype": "Если найдена только одна подходящая запись, выбирать ее для автозаполнения автоматически",
   "setGenFunction": "Поведение",
   "setGenAutoSyncOnClose": "Автоматически сохранять и синхронизировать при закрытии",
   "setGenAutoSyncTimer": "Автоматически сохранять и периодически синхронизировать",
@@ -387,7 +392,7 @@
   "setGenNoRememberKeyFiles": "Не запоминать",
   "setGenRememberKeyFilesData": "Хранить во внутреннем хранилище приложения",
   "setGenRememberKeyFilesPath": "Помнить только путь к ключевому файлу",
-  "setGenLockInactive": "Автоматическая блокировка, если приложение неактивно",
+  "setGenLockInactive": "Если приложение неактивно",
   "setGenNoAutoLock": "Не блокировать",
   "setGenLockMinutes": "Через {} минут",
   "setGenLockHour": "Через час",
@@ -399,9 +404,9 @@
   "setGenClearMinute": "Через минуту",
   "setGenMinInstead": "Минимизировать приложение вместо закрытия",
   "setGenLock": "Авто-блокировка",
-  "setGenLockMinimize": "Автоматическая блокировка при минимизации",
-  "setGenLockCopy": "Автоматическая блокировка после копирования пароля",
-  "setGenLockAutoType": "Автоматическая блокировка после автозаполнения",
+  "setGenLockMinimize": "Когда приложение свернуто",
+  "setGenLockCopy": "После копирования пароля",
+  "setGenLockAutoType": "После автозаполнения",
   "setGenLockOrSleep": "Когда компьютер заблокирован или отправлен в сон",
   "setGenStorage": "Хранилище",
   "setGenShowAdvanced": "Показать дополнительные настройки",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Несохраненные файлы",
   "setGenTryBetaWarningBody": "Сохраните все файлы и снова нажмите эту кнопку",
   "setGenShowAppLogs": "Журнал приложения",
+  "setGenReloadApp": "Перезагрузить приложение",
   "setFilePath": "Путь к файлу",
   "setFileStorage": "Это файл загружен из {}.",
   "setFileIntl": "Этот файл хранится во внутренней памяти приложения",
@@ -428,7 +434,7 @@
   "setFilePass": "Мастер-пароль",
   "setFileConfirmPass": "Подтвердить мастер-пароль",
   "setFilePassChange": "чтобы изменить пароль, введите его в поле «Подтвердить»",
-  "setFilePassChanged": "пароль был изменен; оставьте поле пустым, чтобы использовать старый пароль",
+  "setFilePassChanged": "ваш пароль был изменен; оставьте поле пустым, чтобы использовать старый пароль",
   "setFilePassNotMatch": "пароли не совпадают, пожалуйста, введите еще раз",
   "setFileKeyFile": "Ключевой файл",
   "setFileSelKeyFile": "Выберите ключевой файл",
@@ -464,7 +470,7 @@
   "setFileGenKeyFile": "Создать новый ключевой файл",
   "setFileDontUseKeyFile": "Не использовать ключевой файл",
   "setFileEmptyPass": "Пустой пароль",
-  "setFileEmptyPassBody": "Сохранение базы данных с пустым паролем делает ее абсолютно незащищенной. Вы действительно хотите сделать это?",
+  "setFileEmptyPassBody": "Сохранение базы данных с пустым паролем делает ее полностью незащищенной. Вы действительно хотите это сделать?",
   "setFileSaveError": "Ошибка при сохранении",
   "setFileSaveErrorBody": "Ошибка сохранения файла",
   "setFileAlreadyExists": "Уже существует",
@@ -490,13 +496,13 @@
   "setShSave": "сохранить все файлы",
   "setShGen": "создать пароль",
   "setShSet": "настройки приложения",
-  "setShCopyPassGlobal": "копировать пароль (когда приложение работает в фоновом режиме)",
-  "setShCopyUserGlobal": "копировать имя пользователя (когда приложение работает в фоновом режиме)",
-  "setShCopyUrlGlobal": "копировать URL (когда приложение работает в фоновом режиме)",
+  "setShCopyPassGlobal": "скопировать пароль (когда приложение работает в фоновом режиме)",
+  "setShCopyUserGlobal": "скопировать имя пользователя (когда приложение работает в фоновом режиме)",
+  "setShCopyUrlGlobal": "копировать сайт (когда приложение работает в фоновом режиме)",
   "setShAutoTypeGlobal": "автозаполнение (когда приложение работает в фоновом режиме)",
   "setShLock": "заблокировать базу данных",
   "setPlInstallTitle": "Установить новые плагины",
-  "setPlInstallDesc": "Плагины для KeeWeb добавляют новые функции, темы и языки. Плагины работают с теми же привилегиями, что и KeeWeb, они могут получать и управлять всеми вашими паролями. Никогда не устанавливайте плагины, которым вы не доверяете.",
+  "setPlInstallDesc": "Плагины для KeeWeb добавляют новые функции, темы и языки. Плагины работают с теми же привилегиями, что и KeeWeb, они могут получить доступ ко всем вашим паролям и управлять ими. Никогда не устанавливайте плагины, которым вы не доверяете.",
   "setPlInstallLabel": "URL-адрес плагина",
   "setPlInstallBtn": "Установить",
   "setPlInstallBtnProgress": "Установка",
@@ -533,7 +539,7 @@
   "setAboutSecond": "под лицензией {}.",
   "setAboutSource": "Исходный код и обсуждение на {}.",
   "setHelpFormat": "Формат файла",
-  "setHelpFormatBody": "Это приложение - портированная версия {} созданная на основе веб-технологий. Оно совместимо с файлами формата KeePass (kdbx). Файлы базы данных паролей можно создавать как в KeePass, так и в этом приложении. Формат файла на 100% совместим и понятен обоим приложениям.",
+  "setHelpFormatBody": "Это портированная версия {}, созданная на основе веб-технологий. Она совместима с файлами формата KeePass (kdbx). Файлы базы данных паролей можно создавать как в KeePass, так и в этом приложении. Формат файла на 100% совместим и понятен обоим приложениям.",
   "setHelpProblems": "Нужна помощь?",
   "setHelpProblems1": "Если что-то пойдет не так, пожалуйста, {}",
   "setHelpProblems2": "или {}",
@@ -545,7 +551,7 @@
   "setHelpWebApp": "Веб-приложение",
   "setHelpUpdates": "Обновления",
   "setHelpTwitter": "Twitter",
-  "dropboxSetupDesc": "Для использования Dropbox в автономном приложении требуется дополнительная настройка. Создайте автономное приложение Dropbox и введите его ключ ниже.",
+  "dropboxSetupDesc": "Для использования Dropbox в отдельном приложении требуется дополнительная настройка. Создайте ваше приложение Dropbox и введите его ключ ниже.",
   "dropboxAppKey": "Ключ приложения Dropbox",
   "dropboxAppKeyDesc": "Скопируйте ключ из своего приложения Dropbox (настройки для разработчиков)",
   "dropboxFolder": "Папка приложения",
@@ -563,5 +569,5 @@
   "launcherSave": "Сохранение паролей базы данных",
   "launcherFileFilter": "Файлы KeePass",
   "authPopupRequired": "Всплывающие окна заблокированы",
-  "authPopupRequiredBody": "Разрешите всплывающие окна для этого приложения в вашем браузере."
+  "authPopupRequiredBody": "Разрешите всплывающие окна в вашем браузере или попробуйте снова."
 }
