--- a/docs/translations/de-DE/de-DE.json
+++ b/docs/translations/de-DE/de-DE.json
@@ -109,6 +109,8 @@
   "genPresetMac": "MAC-Adresse",
   "genPresetHash128": "128-Bit Hash",
   "genPresetHash256": "256-Bit Hash",
+  "genHidePass": "Password ausblenden",
+  "genShowPass": "Passwort einblenden",
   "grpTitle": "Gruppe",
   "grpSearch": "Suche für Einträge in dieser Gruppe aktivieren",
   "grpAutoType": "Auto-Type aktivieren",
@@ -174,6 +176,7 @@
   "searchOptions": "Suchoptionen",
   "searchCase": "Groß/klein",
   "searchRegex": "RegEx",
+  "searchRank": "Automatisch",
   "openOpen": "Öffnen",
   "openNew": "Neu",
   "openMore": "Mehr",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Datei nicht gefunden",
   "openListErrorBody": "Dateien konnten nicht geladen werden",
   "openShowAllFiles": "Alle Dateien anzeigen",
+  "openFileNoCacheError": "Die Datei wurde im Cache-Speicher nicht gefunden. Möglicherweise wurde Ihr Browser-Speicher geleert. Um die Datei zu öffnen, entfernen Sie sie aus KeeWeb und fügen Sie sie erneut hinzu",
   "detAttDownload": "Umschalttaste + Klick auf den Anhang-Button zum Herunterladen oder",
   "detAttDelToRemove": "Backspace zum entfernen",
   "detEmpty": "Ihre Passwörter werden hier angezeigt",
@@ -236,8 +240,8 @@
   "detHistoryRevertAlertBody": "Ihr aktueller Stand wird in der Historie gesichert.",
   "detHistoryDeleteAlert": "Diesen Stand löschen?",
   "detHistoryDeleteAlertBody": "Sie können ihn nicht wiederherstellen.",
-  "detHistoryDiscardChangesAlert": "Änderung verwerfen?",
-  "detHistoryDiscardChangesAlertBody": "Ungesicherte Änderungen sind unwiderruflich verloren.",
+  "detHistoryDiscardChangesAlert": "Änderungen an diesem Eintrag verwerfen?",
+  "detHistoryDiscardChangesAlertBody": "Ungespeicherte Änderungen gehen dabei unwiderruflich verloren.",
   "detBackToList": "zurück zur Liste",
   "detSetIconColor": "Farbe ändern",
   "detSetIcon": "Icon ändern",
@@ -325,8 +329,8 @@
   "appSaveErrorBody": "Automatisches Speichern fehlgeschlagen",
   "appSaveErrorBodyMul": "Automatisches Speichern fehlgeschlagen:",
   "appSettingsError": "Fehler beim Laden der App",
-  "appSettingsErrorBody": "Es gab einen Fehler beim Laden der App-Einstellungen. Bitte überprüfen Sie die App URL oder kontaktieren Sie Ihren Systemadministrator.",
-  "appNotSupportedError": "Ihr Browser wird nicht unterstützt.",
+  "appSettingsErrorBody": "Es gab einen Fehler beim Laden der App-Einstellungen. Bitte überprüfen Sie die App-URL oder kontaktieren Sie Ihren Systemadministrator.",
+  "appNotSupportedError": "Ihr Browser unterstützt einige wichtige Funktionen nicht, die für diese App benötigt werden.",
   "appTabWarn": "Zu viele Tabs",
   "appTabWarnBody": "KeeWeb kann nicht in mehreren Browser-Tabs gleichzeitig genutzt werden, bitte schließen Sie diesen Tab.",
   "appRightsAlert": "Schreibschutz für KeeWeb wird eingerichtet",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Einträge aus allen Untergruppen anzeigen",
   "setGenTableView": "Einträge in Tabellenansicht anzeigen",
   "setGenColorfulIcons": "Eigene Icons in der Listenansicht farbig anzeigen",
+  "setGenDirectAutotype": "Wenn nur ein passender Eintrag gefunden wird, diesen automatisch für Auto-Type auswählen",
   "setGenFunction": "Arbeitsweise",
   "setGenAutoSyncOnClose": "Beim Schließen speichern und synchronisieren",
   "setGenAutoSyncTimer": "Regelmäßig speichern und synchronisieren",
@@ -387,7 +392,7 @@
   "setGenNoRememberKeyFiles": "Nicht merken",
   "setGenRememberKeyFilesData": "Im internen App-Speicher ablegen",
   "setGenRememberKeyFilesPath": "Nur Speicherort der Schlüsseldateien merken",
-  "setGenLockInactive": "Automatisch sperren, wenn die App inaktiv ist",
+  "setGenLockInactive": "Wenn die App inaktiv ist",
   "setGenNoAutoLock": "Nicht automatisch sperren",
   "setGenLockMinutes": "Nach {} Minuten",
   "setGenLockHour": "In einer Stunde",
@@ -399,7 +404,7 @@
   "setGenClearMinute": "Nach einer Minute",
   "setGenMinInstead": "App beim Schließen stattdessen minimieren",
   "setGenLock": "Automatisch sperren",
-  "setGenLockMinimize": "Beim Minimieren automatisch sperren",
+  "setGenLockMinimize": "Beim Minimieren der App",
   "setGenLockCopy": "Nach dem Kopieren eines Passworts",
   "setGenLockAutoType": "Bei Auto-Type",
   "setGenLockOrSleep": "Bei Aktivierung von Bildschirmsperre oder Ruhezustand",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Ungespeicherte Dateien",
   "setGenTryBetaWarningBody": "Bitte speichern Sie alle Dateien und Klicken Sie erneut auf diesen Button",
   "setGenShowAppLogs": "App-Logs anzeigen",
+  "setGenReloadApp": "App neu laden",
   "setFilePath": "Dateipfad",
   "setFileStorage": "Diese Datei wird von {} geladen.",
   "setFileIntl": "Diese Datei ist im internen App-Speicher abgelegt",
@@ -491,7 +497,7 @@
   "setShGen": "Passwort generieren",
   "setShSet": "App-Einstellungen",
   "setShCopyPassGlobal": "Passwort kopieren (wenn die App im Hintergrund ist)",
-  "setShCopyUserGlobal": "Usernamen kopieren (wenn die App im Hintergrund ist)",
+  "setShCopyUserGlobal": "Benutzer kopieren (wenn die App im Hintergrund ist)",
   "setShCopyUrlGlobal": "Website kopieren (wenn die App im Hintergrund ist)",
   "setShAutoTypeGlobal": "Auto-Type (wenn die App im Hintergrund ist)",
   "setShLock": "Datenbank sperren",
