--- a/docs/translations/tr/tr.json
+++ b/docs/translations/tr/tr.json
@@ -109,6 +109,8 @@
   "genPresetMac": "MAC adresi",
   "genPresetHash128": "128-bit hash",
   "genPresetHash256": "256-bit hash",
+  "genHidePass": "Parolayı gizle",
+  "genShowPass": "Parolayı göster",
   "grpTitle": "Küme",
   "grpSearch": "Bu kümedeki girdileri aramayı etkinleştir",
   "grpAutoType": "Otomatik yazım etkin",
@@ -174,6 +176,7 @@
   "searchOptions": "Seçenekler",
   "searchCase": "Durum eşleştir",
   "searchRegex": "Düzenli ifade",
+  "searchRank": "Sıra",
   "openOpen": "Aç",
   "openNew": "Yeni",
   "openMore": "Dahası",
@@ -215,6 +218,7 @@
   "openErrorFileNotFound": "Dosya bulunamadı",
   "openListErrorBody": "Dosya yükleme listesinde bir hata var.",
   "openShowAllFiles": "Tüm dosyaları göster",
+  "openFileNoCacheError": "Önbellek deposunda dosya bulunamadı. Bu olabilir, tarayıcı depolama alanı temizlendi. Dosyayı açmak için, KeeWeb'den kaldırın ve tekrar ekleyin.",
   "detAttDownload": "İndirmek için ek dosya butonuna Shift tuşuna basarak tıklayın ya da",
   "detAttDelToRemove": "Kaldırmak için sil",
   "detEmpty": "Parolalarınız burada gösterilecek",
@@ -378,6 +382,7 @@
   "setGenShowSubgroups": "Tüm alt kümelerden girdileri göster",
   "setGenTableView": "Girdileri tablo görünümünde listele",
   "setGenColorfulIcons": "Listedeki renkli özel simgeler",
+  "setGenDirectAutotype": "Yalnızca bir eşleşen giriş bulunursa otomatik yazım için bunu seç",
   "setGenFunction": "İşlev",
   "setGenAutoSyncOnClose": "Otomatik kaydetmeyi ve eşitlemeyi kapat",
   "setGenAutoSyncTimer": "Düzenli olarak otomatik kaydet ve eşitle",
@@ -410,6 +415,7 @@
   "setGenTryBetaWarning": "Kaydedilmemiş dosyalar",
   "setGenTryBetaWarningBody": "Lütfen tüm dosyaları kaydedin ve düğmeye tekrar tıklayın",
   "setGenShowAppLogs": "Uygulama günlüklerini göster",
+  "setGenReloadApp": "Uygulamayı yeniden yükle",
   "setFilePath": "Dosya yolu",
   "setFileStorage": "Bu dosya {} den yüklenmiştir.",
   "setFileIntl": "Bu dosya dahili uygulama deposunda saklanır",
